src/test/ui/issue-44406.stderr
error: expected identifier, found keyword `true`
  --> $DIR/issue-44406.rs:18:10
   |
18 |     foo!(true);
   |          ^^^^

error: expected type, found keyword `true`
  --> $DIR/issue-44406.rs:18:10
   |
13 |         bar(baz: $rest)
   |                - help: did you mean to use `;` here?
...
18 |     foo!(true);
   |          ^^^^ expecting a type here because of type ascription

error: aborting due to 2 previous errors

